<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ca.kainotomia.it.aphrodite.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_layout"
        android:name="ca.kainotomia.it.aphrodite.ui.layouts.LayoutFragment"
        android:label="@string/title_layouts"
        tools:layout="@layout/fragment_layouts" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="ca.kainotomia.it.aphrodite.ui.account.AccountFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_voice"
        android:name="ca.kainotomia.it.aphrodite.ui.voice.VoiceFragment"
        android:label="@string/title_voice"
        tools:layout="@layout/voice_fragment" />
</navigation>