<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/voice_rounded_backgrnd"
    android:padding="5dp"
    app:circularflow_radiusInDP="10dp"
    android:id="@+id/voice_newCmdFragment"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/voice_newCmdTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:digits="@string/alphabetAndUnderscore"
        android:hint="@string/voice_title_editTxt"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/voice_newCmdDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:digits="@string/alphabetAndSpace"
        android:hint="@string/voice_desc_editTxt"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voice_newCmdTitle"
        tools:layout_editor_absoluteY="116dp" />

    <Button
        android:id="@+id/voice_newCmdBtn"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/dark_ocean"
        android:text="@string/voice_submit_cmd_txt"
        android:textColor="@color/light_ocean"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voice_newCmdDesc" />

</androidx.constraintlayout.widget.ConstraintLayout>