<?xml version="1.0" encoding="utf-8"?><!--Jose Antonio Castro Teodoro n01384776 Section B-->
<!--Daniel Moore n01354875 Section B-->
<!--Ryan Black n01305403 Section B-->
<!--Alyssa Gomez n01042777 Section B-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter_oak"
    tools:context=".ui.account.AccountFragment"
    tools:layout_editor_absoluteX="-28dp"
    tools:layout_editor_absoluteY="160dp">


    <TextView
        android:id="@+id/CP_TextView_title"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/CP_TextView_changePass"
        android:textAllCaps="true"
        android:textColor="@color/dark_ocean"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/CP_PlainText_title_PasswordInput"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:digits="@string/passwordDigits"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/CP_PlainText_Password_input"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/mid_ocean"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CP_TextView_title"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/CP_PlainText_title_NewPasswordInput"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:digits="@string/passwordDigits"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/CP_PlainText_NewPass_input"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/mid_ocean"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CP_PlainText_title_PasswordInput"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/CP_PlainText_title_ConfirmPasswordInput"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:digits="@string/passwordDigits"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/CP_PlainText_ConfirmPass_input"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/mid_ocean"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CP_PlainText_title_NewPasswordInput"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/CP_Button_Save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Button_height"
        android:layout_marginStart="@dimen/Button_margin_StartEnd"
        android:layout_marginEnd="@dimen/Button_margin_StartEnd"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/light_ocean"
        android:text="@string/CP_Button_Save_text"
        android:textColor="@color/mid_ocean"
        android:textStyle="bold"
        app:cornerRadius="@dimen/Button_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CP_PlainText_title_ConfirmPasswordInput"
        app:layout_constraintVertical_bias="0.981"
        app:rippleColor="@color/lighter_oak"
        tools:text="@string/AFR_Button_submit" />


</androidx.constraintlayout.widget.ConstraintLayout>