<?xml version="1.0" encoding="utf-8"?>
<!--Jose Antonio Castro Teodoro n01384776 Section B-->
<!--Daniel Moore n01354875 Section B-->
<!--Ryan Black n01305403 Section B-->
<!--Alyssa Gomez n01042777 Section B-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan"
    tools:context=".ui.account.AccountFragment"
    tools:layout_editor_absoluteX="-28dp"
    tools:layout_editor_absoluteY="160dp">

    <Button
        android:id="@+id/AFSS_Button_add"
        android:layout_width="711dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/light_ocean"
        android:text="@string/AF_Button_settings"
        android:textColor="@color/mid_ocean"
        app:icon="@drawable/remove"
        app:iconTint="@color/mid_ocean"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638" />

    <Button
        android:id="@+id/AF_Button_logout"
        android:layout_width="711dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/peach"
        android:text="@string/AF_Button_logout"
        android:textColor="@color/light_oak"
        app:icon="@drawable/logout"
        app:iconSize="25dp"
        app:iconTint="@color/light_oak"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795"
        app:rippleColor="@color/dark_ocean" />

    <Button
        android:id="@+id/AF_Button_about"
        android:layout_width="711dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/light_ocean"
        android:text="@string/AF_Button_about"
        android:textColor="@color/mid_ocean"
        app:icon="@drawable/about"
        app:iconTint="@color/mid_ocean"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364" />

    <TextView
        android:id="@+id/AF_TextView_username"
        android:layout_width="548dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/peach"
        android:text="@string/AF_TextView_username"
        android:textAlignment="center"
        android:textColor="@color/light_oak"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <ImageView
        android:id="@+id/AF_ImageView_profilepicture"
        android:layout_width="115dp"
        android:layout_height="109dp"
        android:background="@color/light_ocean"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052"
        app:srcCompat="@drawable/profile"
        tools:src="@tools:sample/avatars"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/AF_TextView_version"
        android:layout_width="711dp"
        android:layout_height="49dp"
        android:background="@color/light_ocean"
        android:gravity="center"
        android:text="@string/AF_TextView_version"
        android:textColor="@color/mid_ocean"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

    <Button
        android:id="@+id/AF_Button_support"
        android:layout_width="711dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/light_ocean"
        android:text="@string/AF_Button_support"
        android:textColor="@color/mid_ocean"
        app:icon="@drawable/support"
        app:iconTint="@color/mid_ocean"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/AF_FrameLayout_orientation"
        android:layout_width="731dp"
        android:layout_height="410dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>