<?xml version="1.0" encoding="utf-8"?>
<!--Jose Antonio Castro Teodoro n01384776 Section B-->
<!--Daniel Moore n01354875 Section B-->
<!--Ryan Black n01305403 Section B-->
<!--Alyssa Gomez n01042777 Section B-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter_oak"
    tools:context=".ui.account.AccountFragment">

    <ImageView
        android:id="@+id/AFS_ImageView_logo"
        android:layout_width="175dp"
        android:layout_height="156dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="false"
        android:background="@drawable/roundstyle"
        android:cropToPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/aphrodite_logot_trans_med"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/AFS_TextView_title"
        android:layout_width="189dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/AFS_TextView_title"
        android:textAllCaps="true"
        android:textColor="@color/dark_ocean"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AFS_ImageView_logo"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/AF_Button_Email"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="360dp"
        android:backgroundTint="@color/light_ocean"
        android:text="@string/AF_EmailButton_text"
        android:textColor="@color/mid_ocean"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_baseline_email_24"
        app:iconGravity="textStart"
        app:iconSize="22dp"
        app:iconTint="@color/mid_ocean"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AFS_TextView_title"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="@color/lighter_oak"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/AFS_TextView_Number"
        android:layout_width="357dp"
        android:layout_height="104dp"
        android:background="@drawable/roundcorner_lightocean"
        android:gravity="center"
        android:text="@string/AFS_TextView_Number"
        android:textColor="@color/mid_ocean"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AF_Button_Email"
        app:layout_constraintVertical_bias="0.301" />

</androidx.constraintlayout.widget.ConstraintLayout>